PAGOPA-1492 fixing regex and toList issue