@@ -24,7 +24,6 @@ import org.springframework.stereotype.Repository;
 import org.springframework.util.CollectionUtils;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import static it.gov.pagopa.afm.calculator.service.UtilityComponent.isGlobal;
@@ -54,7 +53,7 @@ public class CosmosRepository {
     return bundle.getCiBundleList() != null
         ? bundle.getCiBundleList().parallelStream()
             .filter(ciBundle -> ciFiscalCode.equals(ciBundle.getCiFiscalCode()))
-            .collect(Collectors.toList())
+            .toList()
         : null;
   }
 
@@ -281,7 +280,7 @@ public class CosmosRepository {
         .filter(bundle -> digitalStampFilter(transferListSize, onlyMarcaBolloDigitale, bundle))
         // Gets the GLOBAL bundles and PRIVATE|PUBLIC bundles of the CI
         .filter(bundle -> globalAndRelatedFilter(paymentOptionMulti, bundle))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -304,7 +303,7 @@ public class CosmosRepository {
         .filter(bundle -> digitalStampFilter(transferListSize, onlyMarcaBolloDigitale, bundle))
         // Gets the GLOBAL bundles and PRIVATE|PUBLIC bundles of the CI
         .filter(bundle -> globalAndRelatedFilter(paymentOption, bundle))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
